docs/pss-inventory/retrieved-mdapi/unpackaged/objects/sfsp__SalesProduct__c.object
<CustomObject>
    <fields>
        <fullName>sfsp__Config__c</fullName>
        <description>JSON array of product configuration values</description>
        <label>Config</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sfsp__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sfsp__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>sfsp__SalesProduct__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfsp__SalesPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Plan</label>
        <referenceTo>sfsp__SalesPlan__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Product</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>